# ml_training

./: .env  README.md  README_en.md  clear_container.sh  docker-compose.yml  notes.md  rebase_ml.sh
examples/train_pipeline/: train_ml_model.py
examples/wrappers/: train_deeplabv3_plus.py  train_yolov8.py
ml_training/: .env  Dockerfile  basic_auth.ini  main.py  pyproject.toml  utils.py
ml_training/deployment/: deployment_client.py
ml_training/ml_training/: __init__.py  config.py  routers.py  worker.py
ml_training/ml_training/dataset_processing/: __init__.py  annotation.py  dataset.py  dataset_cropping.py  image_source.py  tools.py
ml_training/ml_training/pipeline/: exception.py  router.py  schemas.py  service.py  train.py  utils.py  worker.py
ml_training/ml_training/wrappers/: base_wrapper.py
ml_training/ml_training/wrappers/deeplab/: callbacks.py  cfg.yaml  dataset.py  image_processing.py  model.py  tools.py  train.py  utils.py  wrapper.py
ml_training/ml_training/wrappers/yolo/: args.yaml  callbacks.py  tools.py  train.py  wrapper.py
ml_training/pipeline/: fast.py  tasks.py  train.py
ml_training/pipeline/db/: posrge.py
tests/: test_utils_convert_to_pbtxt.py
tests/deployment/: test_triton_deployment_client.py
tests/test_files/model_repository/model_onnx/: MLmodel.yaml
tests/test_files/model_repository/model_onnx/1/: model.onnx
